fix navbar alignment

--- a/app/assets/stylesheets/website.scss
+++ b/app/assets/stylesheets/website.scss
@@ -6,3 +6,8 @@ header{
   padding: 10px;
   border-bottom: #D3D3D3 3px solid;
 }
+.navholder{
+  width:50%;
+  margin-left:auto;
+
+}
